small changes from the last weeks

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ workspace=5
 
 xwayland {
     force_zero_scaling = true
-    use_nearest_neighbor = true
+    use_nearest_neighbor = false
 }
 
 env = GDK_SCALE,1
@@ -84,8 +84,8 @@ device {
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
-exec-once = hyprpaper || $ERROR_NOTIFY "Hyprpaper could not be started."
-exec-once = hypridle || $ERROR_NOTIFY "Hypridle could not be started."
+exec-once = hyprpaper
+exec-once = hypridle
 # exec-once = hyprpm reload  #-n
 
 
