--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,7 +1,10 @@
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
+#
+# NOTE: try mpvpaper, looks nice - https://github.com/nomadxxxx/mpvlock-themes/tree/main
 
 $BACKGROUND_IMAGE = $HOME/.config/hypr/backgrounds/linux-elitist/tokyo-lofi-healing-1.png
+$BACKGROUND_IMAGE = $HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
 $AVATAR_IMAGE = $HOME/.config/hypr/assets/avatar.jpg
 $FONT = Monaspace Xenon
 $FONT = Monaspace Krypton
@@ -25,8 +28,8 @@ background {
     monitor =
     path = $BACKGROUND_IMAGE  # or screenshot
 
-    blur_size = 6
-    blur_passes = 3
+    blur_size = 0
+    blur_passes = 1
     noise = 0.0117
     contrast = 1.3000
     brightness = 0.2000
@@ -113,168 +116,168 @@ label {
 # ---------------------------------------------------------------------
 # ---------------------------------- USER -----------------------------
 # ---------------------------------------------------------------------
-image {
-    monitor =
-    path = $AVATAR_IMAGE
-    opacity = 0.5
-    border_color = rgba(0, 0, 0, 0.75)
-    border_size = 5
-    size = 50
-    rounding = -1
-    rotate = 0
-    reload_time = -1
-    reload_cmd = 
-    position = 2, -2
-    halign = left
-    valign = top
-}
-
-
-label {
-    monitor =
-    text = cmd[update:60000] echo "$USER"
-    color = rgba(49, 183, 242, 1.0)
-    font_size = 24
-    font_family = $FONT
-    position = 100, -10
-    halign = left
-    valign = top
-}
-
-label {
-    monitor =
-    text = cmd[update:60000] echo -e "<span size='20000'>$(~/.config/hypr/scripts/uptime.sh)</span>"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 20
-    font_family = $FONT
-    position = 220, -15
-    halign = left
-    valign = top
-}
-
-# --------------------------------------------------------------------
-# --------------------------------- MISC -----------------------------
-# --------------------------------------------------------------------
-label {
-    monitor =
-    text = cmd[update:1000] echo -e "<span size='20000'>$(~/.config/hypr/scripts/quote.sh --quote)</span>"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 20
-    font_family = $FONT
-    position = 0, 650
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] echo -e "<span ><i>$(~/.config/hypr/scripts/quote.sh --author)</i></span>"
-    color = rgba(239, 236, 254, 0.5)
-    font_size = 20
-    font_family = $FONT
-    position = 0, 600
-    halign = center
-    valign = center
-}
-
-# --------------------------------------------------------------------
-# ------------------------------ MUSIC INFO --------------------------
-# --------------------------------------------------------------------
+# image {
+#     monitor =
+#     path = $AVATAR_IMAGE
+#     opacity = 0.5
+#     border_color = rgba(0, 0, 0, 0.75)
+#     border_size = 5
+#     size = 50
+#     rounding = -1
+#     rotate = 0
+#     reload_time = -1
+#     reload_cmd = 
+#     position = 2, -2
+#     halign = left
+#     valign = top
+# }
+#
+#
 # label {
 #     monitor =
-#     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
-#     color = rgba(239, 236, 254, 1.0)
-#     font_size = 26
-#     # font_family = SF Pro Display Bold
+#     text = cmd[update:60000] echo "<b>$USER</b>"
+#     color = rgba(49, 183, 242, 1.0)
+#     font_size = 30
 #     font_family = $FONT
-#     position = 200, -300
+#     position = 100, -10
+#     halign = left
+#     valign = top
+# }
+#
+# label {
+#     monitor =
+#     text = cmd[update:60000] echo -e "<b><span>  </span></b><b><span>$(~/.config/hypr/scripts/uptime.sh)</span></b>"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 30
+#     font_family = $FONT
+#     position = 220, -10
 #     halign = left
 #     valign = top
 # }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --artist)"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 20
-    font_family = $FONT
-    position = 210, 90
-    halign = left
-    valign = bottom
-}
+# # --------------------------------------------------------------------
+# # --------------------------------- MISC -----------------------------
+# # --------------------------------------------------------------------
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo -e "<span size='20000'>$(~/.config/hypr/scripts/quote.sh --quote)</span>"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 20
+#     font_family = $FONT
+#     position = 0, 650
+#     halign = center
+#     valign = center
+# }
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo -e "<span ><i>$(~/.config/hypr/scripts/quote.sh --author)</i></span>"
+#     color = rgba(239, 236, 254, 0.5)
+#     font_size = 20
+#     font_family = $FONT
+#     position = 0, 600
+#     halign = center
+#     valign = center
+# }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --title)"
-    color = rgba(239, 236, 254, 0.5)
-    font_size = 20
-    font_family = $FONT
-    position = 210, 55
-    halign = left
-    valign = bottom
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] echo "<i>$(~/.config/hypr/scripts/player.sh --album)</i>"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 16
-    font_family = $FONT
-    position = 210, 20
-    halign = left
-    valign = bottom
-}
-
-image {
-    monitor =
-    path = 
-    size = 100
-    rounding = 3 
-    border_size = 1
-    rotate = 0
-    reload_time = 2
-    reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
-    position = -1825, 15
-    halign = center
-    valign = bottom
-    # opacity = 0.05
-}
+# # --------------------------------------------------------------------
+# # ------------------------------ MUSIC INFO --------------------------
+# # --------------------------------------------------------------------
+# # label {
+# #     monitor =
+# #     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
+# #     color = rgba(239, 236, 254, 1.0)
+# #     font_size = 26
+# #     # font_family = SF Pro Display Bold
+# #     font_family = $FONT
+# #     position = 200, -300
+# #     halign = left
+# #     valign = top
+# # }
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --artist)"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 20
+#     font_family = $FONT
+#     position = 210, 90
+#     halign = left
+#     valign = bottom
+# }
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --title)"
+#     color = rgba(239, 236, 254, 0.5)
+#     font_size = 20
+#     font_family = $FONT
+#     position = 210, 55
+#     halign = left
+#     valign = bottom
+# }
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "<i>$(~/.config/hypr/scripts/player.sh --album)</i>"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 16
+#     font_family = $FONT
+#     position = 210, 20
+#     halign = left
+#     valign = bottom
+# }
+#
+# image {
+#     monitor =
+#     path = 
+#     size = 100
+#     rounding = 3 
+#     border_size = 1
+#     rotate = 0
+#     reload_time = 2
+#     reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
+#     position = -1825, 15
+#     halign = center
+#     valign = bottom
+#     # opacity = 0.05
+# }
 
 # ---------------------------------------------------------------------
 # ------------------------------ SYSTEM INFO --------------------------
 # ---------------------------------------------------------------------
-label {
-    monitor =
-    text = cmd[update:5000] echo -e "<sub><span size='37500' foreground='##31b7f2'>$(~/.config/hypr/scripts/keyboard.sh --icon)</span></sub> $(~/.config/hypr/scripts/keyboard.sh --layout)"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 24
-    font_family = $FONT
-    position = -270, -10
-    halign = right
-    valign = top
-}
-
-
-label {
-    monitor =
-    text = cmd[update:5000] echo -e "<sub><span size='32500' foreground='##31b7f2'>$(~/.config/hypr/scripts/network.sh --icon)</span></sub>$(~/.config/hypr/scripts/network.sh --adapter)"
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 24
-    font_family = $FONT
-    position = -90, -10
-    halign = right
-    valign = top
-}
-
-
-label {
-    monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon) $(~/.config/hypr/scripts/power.sh --value)"
-    color = rgba(97, 255, 202, 1.0)
-    color = rgba(255, 103, 103, 1.0)
-    font_size = 28
-    font_family = $FONT
-    position = -15, -7
-    halign = right
-    valign = top
-}
+# label {
+#     monitor =
+#     text = cmd[update:5000] echo -e "<b><sub><span size='40000' foreground='##31b7f2'>$(~/.config/hypr/scripts/keyboard.sh --icon)</span></sub></b> $(~/.config/hypr/scripts/keyboard.sh --layout)"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 32
+#     font_family = $FONT
+#     position = -270, -10
+#     halign = right
+#     valign = top
+# }
+#
+#
+# label {
+#     monitor =
+#     text = cmd[update:5000] echo -e "<b><sub><span size='35000' foreground='##31b7f2'>$(~/.config/hypr/scripts/network.sh --icon)</span></sub></b>$(~/.config/hypr/scripts/network.sh --adapter)"
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 32
+#     font_family = $FONT
+#     position = -90, -10
+#     halign = right
+#     valign = top
+# }
+#
+#
+# label {
+#     monitor =
+#     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon) $(~/.config/hypr/scripts/power.sh --value)"
+#     color = rgba(97, 255, 202, 1.0)
+#     color = rgba(255, 103, 103, 1.0)
+#     font_size = 32
+#     font_family = $FONT
+#     position = -15, -10
+#     halign = right
+#     valign = top
+# }
