--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -3,6 +3,7 @@ binds {
     bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
     bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
     bind = CTRL_ALT, L, exec, hyprlock
+    bind = CTRL_ALT, N, exec, brave --app=https://netflix.com
 
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
