--- a/mangohud/.config/Mangohud/MangoHud.conf
+++ b/mangohud/.config/Mangohud/MangoHud.conf
@@ -8,10 +8,11 @@
 ## prints possible options on stdout
 # help
 
+hud_elements=FPS,GPU,CPU,MEM,IO,FRAME_timing
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
-fps_limit= 0,60,72,144
+fps_limit= 72,80,144,160
 
 ### early = wait before present, late = wait after present
 # fps_limit_method=
@@ -33,7 +34,7 @@ fps_limit= 0,60,72,144
 # bicubic
 
 ### Force trilinear filtering
-# trilinear
+trilinear
 
 ### Disable linear texture filtering. Makes textures look blocky
 # retro
@@ -46,7 +47,7 @@ fps_limit= 0,60,72,144
 ### pre defined presets
 # -1 = default
 #  0 = no display
-#  1 = fps only
+# 1 = fps only
 #  2 = horizontal view
 #  3 = extended
 #  4 = high detailed information
@@ -56,7 +57,7 @@ fps_limit= 0,60,72,144
 # full
 
 ### Show FPS only. ***Not meant to be used with other display params***
-# fps_only
+#fps_only
 
 ### Display custom centered text, useful for a header
 # custom_text_center=
@@ -68,7 +69,7 @@ time_no_label
 
 ### Time formatting examples
 ## %H:%M
-## [ %T %F ]
+#[ %T %F ]
 ## %X # locally formatted time, because of limited glyph range, missing characters may show as '?' (e.g. Japanese)
 # time_format="%T"
 
@@ -78,11 +79,11 @@ time_no_label
 ### Display the current GPU information
 ## Note: gpu_mem_clock and gpu_mem_temp also need "vram" to be enabled
 gpu_stats
-gpu_temp
+#gpu_temp
 # gpu_junction_temp
 # gpu_core_clock
 # gpu_mem_temp
-# gpu_mem_clock
+#gpu_mem_clock
 gpu_power
 # gpu_text=
 # gpu_load_change
@@ -96,8 +97,8 @@ gpu_power
 ### Display the current CPU information
 cpu_stats
 cpu_temp
-cpu_power
-# cpu_text=
+# cpu_power
+#cpu_text=
 # cpu_mhz
 # cpu_load_change
 # cpu_load_value=60,90
@@ -131,13 +132,13 @@ cpu_power
 # battery_time
 
 ### Display FPS and frametime
-fps
-# fps_sampling_period=500
+# fps
+fps_sampling_period=500
 # fps_color_change
 # fps_value=60,100,144
 # fps_color=B22222,FDFD09,39F900
-frametime
-# frame_count
+# frametime
+#frame_count
 ## fps_metrics takes a list of decimal values or the value avg
 # fps_metrics=avg,0.01
 
@@ -150,10 +151,10 @@ frametime
 ### Display miscellaneous information
 #engine_version
 #engine_short_names
-gpu_name
-vulkan_driver
+ # gpu_name
+# vulkan_driver
 # wine
-exec_name
+#exec_name
 # winesync
 
 ### Display loaded MangoHud architecture
@@ -177,7 +178,7 @@ frame_timing
 ## Display the status of HDR (only works in gamescope)
 # hdr
 ## Display the current refresh rate (only works in gamescope)
-refresh_rate
+# refresh_rate
 
 
 ### graphs displays one or more graphs that you chose
@@ -194,7 +195,7 @@ refresh_rate
 # fan
 
 ### Display current FPS limit
-show_fps_limit
+# show_fps_limit
 
 ### Display the current resolution
 # resolution
@@ -230,7 +231,7 @@ show_fps_limit
 
 ### Change default font (set location to TTF/OTF file)
 ## Set font for the whole hud
-# font_file=
+font_file=/usr/share/fonts/OTF/MonaspaceKrypton-SemiBold.otf
 
 ## Set font only for text like media player metadata
 # font_file_text=
@@ -241,7 +242,7 @@ show_fps_limit
 # font_glyph_ranges=korean,chinese,chinese_simplified,japanese,cyrillic,thai,vietnamese,latin_ext_a,latin_ext_b
 
 ### Outline text
-text_outline
+#text_outline
 # text_outline_color = 000000
 # text_outline_thickness = 1.5
 
@@ -249,7 +250,7 @@ text_outline
 position=top-left
 
 ### Change the corner roundness
-# round_corners=0
+round_corners=0
 
 ### Remove margins around MangoHud
 hud_no_margin
@@ -259,7 +260,7 @@ hud_no_margin
 
 ### Display MangoHud in a horizontal position
 horizontal
-# horizontal_stretch
+#horizontal_stretch
 
 ### Disable / hide the hud by default
 # no_display
@@ -275,7 +276,7 @@ horizontal
 # cellpadding_y=-0.085
 
 ### Hud transparency / alpha
-background_alpha=0.4
+background_alpha=0.9
 # alpha=1.0
 
 ### FCAT overlay
@@ -290,8 +291,8 @@ background_alpha=0.4
 # fcat_screen_edge=0
 
 ### Color customization
-# text_color=FFFFFF
-# gpu_color=2E9762
+text_color=FFFFFF
+gpu_color=2E9762
 # cpu_color=2E97CB
 # vram_color=AD64C1
 # ram_color=C26693
@@ -332,10 +333,10 @@ background_alpha=0.4
 ### Change toggle keybinds for the hud & logging
 toggle_hud=Shift_R+F12
 toggle_fps_limit=Shift_R+F11
-toggle_hud_position=Shift_L+F1
-toggle_logging=Shift_L+F2
-reload_cfg=Shift_L+F4
-upload_log=Shift_L+F3
+# toggle_hud_position=Shift_L+F1
+# toggle_logging=Shift_L+F2
+# reload_cfg=Shift_L+F4
+# upload_log=Shift_L+F3
 
 #################### LOG #####################
 ### Automatically start the log after X seconds
