changes to yazi from train ride

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -9,7 +9,8 @@ binds {
     bind = SUPER, C, resizeactive, exact 50% 40%
     bind = SUPER, C, centerwindow
 
-    bind = SUPER, E, exec, nemo ~
+    bind = SUPER, E, exec, kitty -e yazi ~
+    bind = SUPER_SHIFT, E, exec, nemo ~
     bind = SUPER, F, togglefloating
     bind = SUPER, M, fullscreen
 
