--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -3,21 +3,25 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [manager]
-ratio = [1, 2, 3]
-sort_by = "natural"
+A
+[preview]ratio = [2, 3, 3]
+sort_by = "alphabetical"
 sort_sensitive = false
 sort_reverse = false
 sort_dir_first = true
-# linemode       = "size"
-linemode = "custom"
+sort_translit = false
+linemode = "none"
 show_hidden = true
-show_symlink = false
-
-[preview]
+show_symlink = true
+scrolloff = 5
+mouse_events = ["click", "scroll"]
+title_format = "Yazi: {cwd}"
+wrap = "no"
 tab_size = 2
-max_width = 1000
-max_height = 1500
+max_width = 600
+max_height = 900
 cache_dir = ""
+image_delay = 30
 image_filter = "triangle"
 image_quality = 75
 sixel_fraction = 15
@@ -25,79 +29,165 @@ ueberzug_scale = 1
 ueberzug_offset = [0, 0, 0, 0]
 
 [opener]
-open = [{ run = 'opener "$@"', block = true, desc = "Open" }]
+edit = [
+	{ run = '${EDITOR:-vi} "$@"', desc = "$EDITOR", block = true, for = "unix" },
+	{ run = 'code %*', orphan = true, desc = "code", for = "windows" },
+	{ run = 'code -w %*', block = true, desc = "code (block)", for = "windows" },
+]
+open = [
+	{ run = 'xdg-open "$1"', desc = "Open", for = "linux" },
+	{ run = 'open "$@"', desc = "Open", for = "macos" },
+	{ run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
+	{ run = 'termux-open "$1"', desc = "Open", for = "android" },
+]
+reveal = [
+	{ run = 'xdg-open "$(dirname "$1")"', desc = "Reveal", for = "linux" },
+	{ run = 'open -R "$1"', desc = "Reveal", for = "macos" },
+	{ run = 'explorer /select,"%1"', orphan = true, desc = "Reveal", for = "windows" },
+	{ run = 'termux-open "$(dirname "$1")"', desc = "Reveal", for = "android" },
+	{ run = '''clear; exiftool "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show EXIF", for = "unix" },
+]
+extract = [
+	{ run = 'ya pub extract --list "$@"', desc = "Extract here", for = "unix" },
+	{ run = 'ya pub extract --list %*', desc = "Extract here", for = "windows" },
+]
+play = [
+	{ run = 'mpv --force-window "$@"', orphan = true, for = "unix" },
+	{ run = 'mpv --force-window %*', orphan = true, for = "windows" },
+	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
+]
 
 [open]
 rules = [
-    { name = "*/", use = [
-        "edit",
-        "open",
-        "reveal",
-    ] },
-
-    { mime = "*", use = [
-        "open",
-    ] },
+	# Folder
+	{ name = "*/", use = [
+		"edit",
+		"open",
+		"reveal",
+	] },
+	# Text
+	{ mime = "text/*", use = [
+		"edit",
+		"reveal",
+	] },
+	# Image
+	{ mime = "image/*", use = [
+		"open",
+		"reveal",
+	] },
+	# Media
+	{ mime = "{audio,video}/*", use = [
+		"play",
+		"reveal",
+	] },
+	# Archive
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [
+		"extract",
+		"reveal",
+	] },
+	# JSON
+	{ mime = "application/{json,ndjson}", use = [
+		"edit",
+		"reveal",
+	] },
+	{ mime = "*/javascript", use = [
+		"edit",
+		"reveal",
+	] },
+	# Empty file
+	{ mime = "inode/empty", use = [
+		"edit",
+		"reveal",
+	] },
+	# Fallback
+	{ name = "*", use = [
+		"open",
+		"reveal",
+	] },
 ]
 
 [tasks]
 micro_workers = 10
-macro_workers = 25
-bizarre_retry = 5
+macro_workers = 10
+bizarre_retry = 3
 image_alloc = 536870912  # 512MB
 image_bound = [0, 0]
 suppress_preload = false
 
 [plugin]
-
+fetchers = [
+	# Mimetype
+	{ id = "mime", name = "*", run = "mime", prio = "high" },
+]
+spotters = [
+	{ name = "*/", run = "folder" },
+	# Code
+	{ mime = "text/*", run = "code" },
+	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+	# Image
+	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
+	{ mime = "image/svg+xml", run = "svg" },
+	{ mime = "image/*", run = "image" },
+	# Video
+	{ mime = "video/*", run = "video" },
+	# Fallback
+	{ name = "*", run = "file" },
+]
 preloaders = [
-    #{ name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
-    # Image
-    #{ mime = "image/vnd.djvu", run = "noop" },
-    #{ mime = "image/*",        run = "image" },
-    # Video
-    #{ mime = "video/*", run = "video" },
-    # PDF
-    #{ mime = "application/pdf", run = "pdf" },
+	# Image
+	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
+	{ mime = "image/svg+xml", run = "svg" },
+	{ mime = "image/*", run = "image" },
+	# Video
+	{ mime = "video/*", run = "video" },
+	# PDF
+	{ mime = "application/pdf", run = "pdf" },
+	# Font
+	{ mime = "font/*", run = "font" },
+	{ mime = "application/ms-opentype", run = "font" },
 ]
 previewers = [
-    { name = "*/", run = "folder", sync = true },
-    # Code
-    { mime = "text/*", run = "code" },
-    { mime = "*/xml", run = "code" },
-    { mime = "*/javascript", run = "code" },
-    { mime = "*/x-wine-extension-ini", run = "code" },
-    # JSON
-    { mime = "application/json", run = "json" },
-    # Image
-    { mime = "image/{avif,heic,jxl,svg+xml}", run = "magick" },
-    { mime = "image/vnd.djvu", run = "noop" },
-    { mime = "image/*", run = "image" },
-    # Video
-    { mime = "video/*", run = "video" },
-    # PDF
-    { mime = "application/pdf", run = "pdf" },
-    # Archive
-    { mime = "application/zip", run = "archive" },
-    { mime = "application/gzip", run = "archive" },
-    { mime = "application/x-tar", run = "archive" },
-    { mime = "application/x-bzip", run = "archive" },
-    { mime = "application/x-bzip2", run = "archive" },
-    { mime = "application/x-7z-compressed", run = "archive" },
-    { mime = "application/x-rar", run = "archive" },
-    { mime = "application/xz", run = "archive" },
-    # Fallback
-    { name = "*", run = "file" },
+	{ name = "*/", run = "folder" },
+	# Code
+	{ mime = "text/*", run = "code" },
+	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+	# JSON
+	{ mime = "application/{json,ndjson}", run = "json" },
+	# Image
+	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
+	{ mime = "image/svg+xml", run = "svg" },
+	{ mime = "image/*", run = "image" },
+	# Video
+	{ mime = "video/*", run = "video" },
+	# PDF
+	{ mime = "application/pdf", run = "pdf" },
+	# Archive
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", run = "archive" },
+	{ mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}", run = "archive" },
+	{ name = "*.{AppImage,appimage}", run = "archive" },
+	# Virtual Disk / Disk Image
+	{ mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}", run = "archive" },
+	{ mime = "application/virtualbox-{vhd,vhdx}", run = "archive" },
+	{ name = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}", run = "archive" },
+	# Font
+	{ mime = "font/*", run = "font" },
+	{ mime = "application/ms-opentype", run = "font" },
+	# Empty file
+	{ mime = "inode/empty", run = "empty" },
+	# Fallback
+	{ name = "*", run = "file" },
 ]
 
 [input]
+cursor_blink = false
+
 # cd
 cd_title = "Change directory:"
 cd_origin = "top-center"
 cd_offset = [0, 2, 50, 3]
 
 # create
-create_title = "Create:"
+create_title = ["Create:", "Create (dir):"]
 create_origin = "top-center"
 create_offset = [0, 2, 50, 3]
 
@@ -105,16 +195,6 @@ create_offset = [0, 2, 50, 3]
 rename_title = "Rename:"
 rename_origin = "hovered"
 rename_offset = [0, 1, 50, 3]
-
-# trash
-trash_title = "Move {n} selected file{s} to trash? (y/N)"
-trash_origin = "top-center"
-trash_offset = [0, 2, 50, 3]
-
-# delete
-delete_title = "Delete {n} selected file{s} permanently? (y/N)"
-delete_origin = "top-center"
-delete_offset = [0, 2, 50, 3]
 
 # filter
 filter_title = "Filter:"
@@ -136,21 +216,46 @@ shell_title = ["Shell:", "Shell (block):"]
 shell_origin = "top-center"
 shell_offset = [0, 2, 50, 3]
 
+[confirm]
+# trash
+trash_title = "Trash {n} selected file{s}?"
+trash_origin = "center"
+trash_offset = [0, 0, 70, 20]
+
+# delete
+delete_title = "Permanently delete {n} selected file{s}?"
+delete_origin = "center"
+delete_offset = [0, 0, 70, 20]
+
 # overwrite
-overwrite_title = "Overwrite an existing file? (y/N)"
-overwrite_origin = "top-center"
-overwrite_offset = [0, 2, 50, 3]
+overwrite_title = "Overwrite file?"
+overwrite_content = "Will overwrite the following file:"
+overwrite_origin = "center"
+overwrite_offset = [0, 0, 50, 15]
 
 # quit
-quit_title = "{n} task{s} running, sure to quit? (y/N)"
-quit_origin = "top-center"
-quit_offset = [0, 2, 50, 3]
+quit_title = "Quit?"
+quit_content = "The following tasks are still running, are you sure you want to quit?"
+quit_origin = "center"
+quit_offset = [0, 0, 50, 15]
 
-[select]
+[pick]
 open_title = "Open with:"
 open_origin = "hovered"
 open_offset = [0, 1, 50, 7]
 
-[log]
-enabled = false
+[which]
+sort_by = "none"
+sort_sensitive = false
+sort_reverse = false
+sort_translit = false
 
+[[plugin.prepend_fetchers]]
+id = "git"
+name = "*"
+run = "git"
+
+[[plugin.prepend_fetchers]]
+id = "git"
+name = "*/"
+run = "git"
