--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -3,53 +3,54 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [manager]
-A
-[preview]ratio = [2, 3, 3]
-sort_by = "alphabetical"
+ratio          = [ 3, 3, 4 ]
+sort_by        = "alphabetical"
 sort_sensitive = false
-sort_reverse = false
+sort_reverse   = false
 sort_dir_first = true
-sort_translit = false
-linemode = "none"
-show_hidden = true
-show_symlink = true
-scrolloff = 5
-mouse_events = ["click", "scroll"]
-title_format = "Yazi: {cwd}"
-wrap = "no"
-tab_size = 2
-max_width = 600
-max_height = 900
-cache_dir = ""
-image_delay = 30
-image_filter = "triangle"
-image_quality = 75
-sixel_fraction = 15
-ueberzug_scale = 1
-ueberzug_offset = [0, 0, 0, 0]
+sort_translit  = false
+linemode       = "none"
+show_hidden    = true
+show_symlink   = true
+scrolloff      = 5
+mouse_events   = [ "click", "scroll" ]
+title_format   = "Yazi: {cwd}"
+
+[preview]
+wrap            = "no"
+tab_size        = 2
+max_width       = 600
+max_height      = 900
+cache_dir       = ""
+image_delay     = 30
+image_filter    = "triangle"
+image_quality   = 75
+sixel_fraction  = 15
+ueberzug_scale  = 1
+ueberzug_offset = [ 0, 0, 0, 0 ]
 
 [opener]
 edit = [
-	{ run = '${EDITOR:-vi} "$@"', desc = "$EDITOR", block = true, for = "unix" },
-	{ run = 'code %*', orphan = true, desc = "code", for = "windows" },
-	{ run = 'code -w %*', block = true, desc = "code (block)", for = "windows" },
+	{ run = '${EDITOR:-nvim} "$@"', desc = "$EDITOR", block = true, for = "unix" },
+	{ run = 'code %*',    orphan = true, desc = "code",           for = "windows" },
+	{ run = 'code -w %*', block = true,  desc = "code (block)",   for = "windows" },
 ]
 open = [
-	{ run = 'xdg-open "$1"', desc = "Open", for = "linux" },
-	{ run = 'open "$@"', desc = "Open", for = "macos" },
+	{ run = 'xdg-open "$1"',                desc = "Open", for = "linux" },
+	{ run = 'open "$@"',                    desc = "Open", for = "macos" },
 	{ run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
-	{ run = 'termux-open "$1"', desc = "Open", for = "android" },
+	{ run = 'termux-open "$1"',             desc = "Open", for = "android" },
 ]
 reveal = [
-	{ run = 'xdg-open "$(dirname "$1")"', desc = "Reveal", for = "linux" },
-	{ run = 'open -R "$1"', desc = "Reveal", for = "macos" },
+	{ run = 'xdg-open "$(dirname "$1")"',           desc = "Reveal", for = "linux" },
+	{ run = 'open -R "$1"',                         desc = "Reveal", for = "macos" },
 	{ run = 'explorer /select,"%1"', orphan = true, desc = "Reveal", for = "windows" },
-	{ run = 'termux-open "$(dirname "$1")"', desc = "Reveal", for = "android" },
+	{ run = 'termux-open "$(dirname "$1")"',        desc = "Reveal", for = "android" },
 	{ run = '''clear; exiftool "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show EXIF", for = "unix" },
 ]
 extract = [
 	{ run = 'ya pub extract --list "$@"', desc = "Extract here", for = "unix" },
-	{ run = 'ya pub extract --list %*', desc = "Extract here", for = "windows" },
+	{ run = 'ya pub extract --list %*',   desc = "Extract here", for = "windows" },
 ]
 play = [
 	{ run = 'mpv --force-window "$@"', orphan = true, for = "unix" },
@@ -60,58 +61,30 @@ play = [
 [open]
 rules = [
 	# Folder
-	{ name = "*/", use = [
-		"edit",
-		"open",
-		"reveal",
-	] },
+	{ name = "*/", use = [ "edit", "open", "reveal" ] },
 	# Text
-	{ mime = "text/*", use = [
-		"edit",
-		"reveal",
-	] },
+	{ mime = "text/*", use = [ "edit", "reveal" ] },
 	# Image
-	{ mime = "image/*", use = [
-		"open",
-		"reveal",
-	] },
+	{ mime = "image/*", use = [ "open", "reveal" ] },
 	# Media
-	{ mime = "{audio,video}/*", use = [
-		"play",
-		"reveal",
-	] },
+	{ mime = "{audio,video}/*", use = [ "play", "reveal" ] },
 	# Archive
-	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [
-		"extract",
-		"reveal",
-	] },
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [ "extract", "reveal" ] },
 	# JSON
-	{ mime = "application/{json,ndjson}", use = [
-		"edit",
-		"reveal",
-	] },
-	{ mime = "*/javascript", use = [
-		"edit",
-		"reveal",
-	] },
+	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
+	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
 	# Empty file
-	{ mime = "inode/empty", use = [
-		"edit",
-		"reveal",
-	] },
+	{ mime = "inode/empty", use = [ "edit", "reveal" ] },
 	# Fallback
-	{ name = "*", use = [
-		"open",
-		"reveal",
-	] },
+	{ name = "*", use = [ "open", "reveal" ] },
 ]
 
 [tasks]
-micro_workers = 10
-macro_workers = 10
-bizarre_retry = 3
-image_alloc = 536870912  # 512MB
-image_bound = [0, 0]
+micro_workers    = 10
+macro_workers    = 10
+bizarre_retry    = 3
+image_alloc      = 536870912  # 512MB
+image_bound      = [ 0, 0 ]
 suppress_preload = false
 
 [plugin]
@@ -182,80 +155,80 @@ previewers = [
 cursor_blink = false
 
 # cd
-cd_title = "Change directory:"
+cd_title  = "Change directory:"
 cd_origin = "top-center"
-cd_offset = [0, 2, 50, 3]
+cd_offset = [ 0, 2, 50, 3 ]
 
 # create
-create_title = ["Create:", "Create (dir):"]
+create_title  = [ "Create:", "Create (dir):" ]
 create_origin = "top-center"
-create_offset = [0, 2, 50, 3]
+create_offset = [ 0, 2, 50, 3 ]
 
 # rename
-rename_title = "Rename:"
+rename_title  = "Rename:"
 rename_origin = "hovered"
-rename_offset = [0, 1, 50, 3]
+rename_offset = [ 0, 1, 50, 3 ]
 
 # filter
-filter_title = "Filter:"
+filter_title  = "Filter:"
 filter_origin = "top-center"
-filter_offset = [0, 2, 50, 3]
+filter_offset = [ 0, 2, 50, 3 ]
 
 # find
-find_title = ["Find next:", "Find previous:"]
+find_title  = [ "Find next:", "Find previous:" ]
 find_origin = "top-center"
-find_offset = [0, 2, 50, 3]
+find_offset = [ 0, 2, 50, 3 ]
 
 # search
-search_title = "Search via {n}:"
+search_title  = "Search via {n}:"
 search_origin = "top-center"
-search_offset = [0, 2, 50, 3]
+search_offset = [ 0, 2, 50, 3 ]
 
 # shell
-shell_title = ["Shell:", "Shell (block):"]
+shell_title  = [ "Shell:", "Shell (block):" ]
 shell_origin = "top-center"
-shell_offset = [0, 2, 50, 3]
+shell_offset = [ 0, 2, 50, 3 ]
 
 [confirm]
 # trash
-trash_title = "Trash {n} selected file{s}?"
-trash_origin = "center"
-trash_offset = [0, 0, 70, 20]
+trash_title 	= "Trash {n} selected file{s}?"
+trash_origin	= "center"
+trash_offset	= [ 0, 0, 70, 20 ]
 
 # delete
-delete_title = "Permanently delete {n} selected file{s}?"
-delete_origin = "center"
-delete_offset = [0, 0, 70, 20]
+delete_title 	= "Permanently delete {n} selected file{s}?"
+delete_origin	= "center"
+delete_offset	= [ 0, 0, 70, 20 ]
 
 # overwrite
-overwrite_title = "Overwrite file?"
+overwrite_title   = "Overwrite file?"
 overwrite_content = "Will overwrite the following file:"
-overwrite_origin = "center"
-overwrite_offset = [0, 0, 50, 15]
+overwrite_origin  = "center"
+overwrite_offset  = [ 0, 0, 50, 15 ]
 
 # quit
-quit_title = "Quit?"
+quit_title   = "Quit?"
 quit_content = "The following tasks are still running, are you sure you want to quit?"
-quit_origin = "center"
-quit_offset = [0, 0, 50, 15]
+quit_origin  = "center"
+quit_offset  = [ 0, 0, 50, 15 ]
 
 [pick]
-open_title = "Open with:"
+open_title  = "Open with:"
 open_origin = "hovered"
-open_offset = [0, 1, 50, 7]
+open_offset = [ 0, 1, 50, 7 ]
 
 [which]
-sort_by = "none"
+sort_by      	 = "none"
 sort_sensitive = false
-sort_reverse = false
-sort_translit = false
+sort_reverse 	 = false
+sort_translit  = false
 
 [[plugin.prepend_fetchers]]
-id = "git"
+id   = "git"
 name = "*"
-run = "git"
+run  = "git"
 
 [[plugin.prepend_fetchers]]
-id = "git"
+id   = "git"
 name = "*/"
-run = "git"
+run  = "git"
