here we go again; on the way to fabric

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -121,7 +121,9 @@ cursor {
 exec-once = systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
-exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
+
+exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
+# exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
 
 # -----------------------------------------------------
 # -------------------- ENVIRONMENT --------------------
@@ -170,12 +172,12 @@ general {
     border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(000000FF)
-    # col.inactive_border = rgba(FFFFFF00)
+    	# col.active_border = rgba(404042ff)
+    	# col.inactive_border = rgba(83858aff)/
 
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(FFFFFF99)
-    col.inactive_border = rgba(000000FF)
+    # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
+    # col.active_border = rgba(1a1a1aee)
+    # col.inactive_border = rgba(000000FF)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -183,7 +185,12 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
+
+    snap {
+        enabled = true
+        window_gap = 0
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -194,7 +201,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -241,7 +248,7 @@ animations {
 dwindle {
     pseudotile = yes
     preserve_split = yes
-    force_split = 0
+    force_split = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
@@ -257,4 +264,15 @@ misc {
     animate_mouse_windowdragging = true
     middle_click_paste = false
     force_default_wallpaper = -1
+    vfr = true
+    animate_manual_resizes = true
+    new_window_takes_over_fullscreen = 2
+}
+
+cursor {
+    hide_on_key_press = true
+}
+
+experimental {
+    xx_color_management_v4 = true
 }
