--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -3,11 +3,10 @@
 #
 # NOTE: try mpvpaper, looks nice - https://github.com/nomadxxxx/mpvlock-themes/tree/main
 
-$BACKGROUND_IMAGE = $HOME/.config/hypr/backgrounds/linux-elitist/tokyo-lofi-healing-1.png
-$BACKGROUND_IMAGE = $HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
+$BACKGROUND_IMAGE = $HOME/.config/hypr/assets/ecatherina-farias.png
 $AVATAR_IMAGE = $HOME/.config/hypr/assets/avatar.jpg
-$FONT = Monaspace Xenon
 $FONT = Monaspace Krypton
+# $FONT = Monaspace Xenon
 # $FONT = SF Pro Display
 # $FONT = Spleen
 
@@ -126,7 +125,7 @@ label {
 #     rounding = -1
 #     rotate = 0
 #     reload_time = -1
-#     reload_cmd = 
+#     reload_cmd =
 #     position = 2, -2
 #     halign = left
 #     valign = top
@@ -230,9 +229,9 @@ label {
 #
 # image {
 #     monitor =
-#     path = 
+#     path =
 #     size = 100
-#     rounding = 3 
+#     rounding = 3
 #     border_size = 1
 #     rotate = 0
 #     reload_time = 2
