--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -103,19 +103,13 @@ windowrules {
     # -------------------------
     # windowrulev2 = stayfocused,class:(.*steam.*|.*TeamSpeak.*),title:(^$)
     # windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*steam.*|.*TeamSpeak.*)
-    windowrulev2 = float, class:^(.*TeamSpeak.*)
-    windowrulev2 = float, class:^(.*steam.*)
-    windowrulev2 = size 60% 60%, class:^(.*steam.*), title:^(.*Steam.*)
-    windowrulev2 = workspace 5, class:^(.*steam.*|.*TeamSpeak.*)
-    windowrulev2 = centerwindow, class:^(.*steam.*), title:^(.*Steam.*)
-    windowrulev2 = centerwindow, class:^(.*TeamSpeak.), title:^(.*TeamSpeak.*)
+    $pattern =.*steam.*|.*Steam.*
 
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*ShadowOfTheTombRaider.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*KOTOR2.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*hl2_linux.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*dota2.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Desperados.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, title:^(.*Unigine.*)
+    windowrulev2 = float, class:^($PATTERN)
+    windowrulev2 = size 60% 60%, class:^($PATTERN), title:^($PATTERN)
+    windowrulev2 = workspace 5, class:^($PATTERN)
+    windowrulev2 = centerwindow, class:^($PATTERN), title:^($PATTERN)
+
     #
     #
     # # ---------------------------------------
