zed config added

--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -4,19 +4,19 @@ windowrules {
     # ------------------------------
     # ------- Generic Dialogs ------
     # ------------------------------
-    $pattern =.*xdg-desktop-portal-gtk.*
-    windowrulev2 = size 50% 40%, class:^($pattern)
-    windowrulev2 = float, class:^($pattern)
-    windowrulev2 = move 25% 30%, class:^($pattern)
+    $PATTERN =.*xdg-desktop-portal-gtk.*
+    windowrulev2 = size 50% 40%, class:^($PATTERN)
+    windowrulev2 = float, class:^($PATTERN)
+    windowrulev2 = move 25% 30%, class:^($PATTERN)
     # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
     # ------------------------------
     # ------ Specific Dialogs ------
     # ------------------------------
-    $pattern =.*Save Image.*
-    windowrulev2 = size 50% 40%, title:^($pattern)
-    windowrulev2 = float, class:^($pattern)
-    windowrulev2 = move 25% 30%, title:^($pattern)
+    $PATTERN =.*Save Image.*
+    windowrulev2 = size 50% 40%, title:^($PATTERN)
+    windowrulev2 = float, class:^($PATTERN)
+    windowrulev2 = move 25% 30%, title:^($PATTERN)
     # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
     # # ------------------------------
@@ -103,12 +103,12 @@ windowrules {
     # -------------------------
     # windowrulev2 = stayfocused,class:(.*steam.*|.*TeamSpeak.*),title:(^$)
     # windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*steam.*|.*TeamSpeak.*)
-    $pattern =.*steam.*|.*Steam.*
+    $PATTERN=.*steam.*|.*Steam.*
 
     windowrulev2 = float, class:^($PATTERN)
-    windowrulev2 = size 60% 60%, class:^($PATTERN), title:^($PATTERN)
+    windowrulev2 = size 60% 60%, class:^($PATTERN)
     windowrulev2 = workspace 5, class:^($PATTERN)
-    windowrulev2 = centerwindow, class:^($PATTERN), title:^($PATTERN)
+    windowrulev2 = centerwindow, class:^($PATTERN)
 
     #
     #
