--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,7 +1,9 @@
 preload = $HOME/.local/share/backgrounds/linux-elitists/ecatherina-farias.png
 preload = $HOME/.local/share/backgrounds/firewatch-dusk.png
+preload = $HOME/.local/share/backgrounds/forest-night.png
 
 splash = false
 
-wallpaper = ,$HOME/.local/share/backgrounds/linux-elitists/ecatherina-farias.png
+wallpaper = ,$HOME/.local/share/backgrounds/forest-night.png
+# wallpaper = ,$HOME/.local/share/backgrounds/linux-elitists/ecatherina-farias.png
 # wallpaper = ,$HOME/.local/backgrounds/regular/firewatch-dusk.png
