--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -105,10 +105,10 @@ windowrules {
     # windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*steam.*|.*TeamSpeak.*)
     $PATTERN=.*steam.*|.*Steam.*
 
-    windowrulev2 = float, class:^($PATTERN)
-    windowrulev2 = size 60% 60%, class:^($PATTERN)
+    # windowrulev2 = float, class:^($PATTERN)
+    # windowrulev2 = size 60% 60%, class:^($PATTERN)
     windowrulev2 = workspace 5, class:^($PATTERN)
-    windowrulev2 = centerwindow, class:^($PATTERN)
+    # windowrulev2 = centerwindow, class:^($PATTERN)
 
     #
     #
