yazi theme; new storage repo added

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -20,11 +20,12 @@ source = $HOME/.config/hypr/rules.conf
 # Desktop
 monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
 monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
-workspace=1, monitor:DP-3, default:true
 
 # Lenovo X13Gen5
-monitor=desc:AU Optronics 0x6693,highres@highr,auto-left,1.25
-workspace=1, monitor:eDP-1, default:true
+monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.25
+monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.0
+
+workspace=1, monitor:DP-3, default:true
 workspace=2
 workspace=3
 workspace=4
