here we go again, now started with quickshell

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -113,7 +113,7 @@ cursor {
 # -----------------------------------------------------
 # --------------------- THEME -------------------------
 # -----------------------------------------------------
-# exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
+exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
 
 
 # -----------------------------------------------------
@@ -123,7 +123,8 @@ exec-once = systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkita
 # exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
 
-exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
+exec = pkill quickshell; quickshell
+# exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
 # exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
 
 # -----------------------------------------------------
