--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -26,11 +26,11 @@
     "features": { "edit_prediction_provider": "zed", "copilot": false },
     // Vanity
     "theme": {
-        "mode": "system",
+        "mode": "dark",
         "light": "Catppuccin Mocha",
-        "dark": "Tokyo Night"
+        "dark": "Tailwind Syntax"
     },
-    "icon_theme": "Catppuccin Mocha",
+    "icon_theme": "Material Icon Theme",
     "ui_font_size": 13,
     "buffer_font_size": 13,
     "ui_font_family": "Monaspace Neon",
@@ -113,22 +113,22 @@
             "comment.doc": {
                 "font_style": "italic"
             }
-        }
-        // "background.appearance": "blurred",
-        // "background": "#121212",
-        // "editor.background": "#121212",
-        // "editor.gutter.background": "#121212",
-        // "tab_bar.background": "#121212",
-        // "terminal.background": "#121212",
-        // "toolbar.background": "#121212",
-        // "tab.active_background": "#0f0f0f",
-        // "tab.inactive_background": "#121212",
-        // "status_bar.background": "#121212",
-        // "title_bar.background": "#121212",
-        // "panel.background": "#121212",
+        },
+        "background.appearance": "blurred",
+        "background": "#121212",
+        "editor.background": "#121212",
+        "editor.gutter.background": "#121212",
+        "tab_bar.background": "#121212",
+        "terminal.background": "#121212",
+        "toolbar.background": "#121212",
+        "tab.active_background": "#0f0f0f",
+        "tab.inactive_background": "#121212",
+        "status_bar.background": "#121212",
+        "title_bar.background": "#121212",
+        "panel.background": "#121212",
         // "border.variant": "#121212",
-        // "scrollbar.track.border": "#121212",
-        // "editor.active_line.background": "#121212"
+        "scrollbar.track.border": "#121212",
+        "editor.active_line.background": "#121212"
     },
     "lsp": {
         "pyright": {
