--- a/yazi/.config/yazi/theme.toml
+++ b/yazi/.config/yazi/theme.toml
@@ -8,9 +8,8 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # : Flavor {{{
-
 [flavor]
-dark = "catppuccin-frappe"
+dark = "kanagawa-dragon"
 light = ""
 
 # : }}}
