mouse laptop setup added

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -81,6 +81,11 @@ device {
     sensitivity = -0.5
 }
 
+device {
+    name = microsoft-microsoft-pro-intellimouse-mouse
+    sensitivity = 0.25
+}
+
 
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
