hyprlock adapted for laptop

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -12,14 +12,14 @@ $FONT = Monaspace Krypton
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 general {
-  grace = 480
+  grace = -1
   no_fade_out = true
   no_fade_in = true
   ignore_empty_input = true
   immediate_render = true
   hide_cursor = true
   screencopy_mode = 0
-  fractional_scaling = 2
+  fractional_scaling = 1
   disable_loading_bar = true
 }
 
@@ -27,8 +27,8 @@ background {
     monitor =
     path = $BACKGROUND_IMAGE  # or screenshot
 
-    blur_size = 0
-    blur_passes = 1
+    blur_size = 1
+    blur_passes = 2
     noise = 0.0117
     contrast = 1.3000
     brightness = 0.2000
@@ -41,39 +41,45 @@ background {
 # -----------------------------------------------------------------------
 input-field {
     monitor =
-    size = 600, 50
-    outline_thickness = 8
-    dots_size = 0.6
-    dots_spacing = 0.8
-    dots_center = true
-    outer_color = rgba(230, 230, 230, 0.0)
-    inner_color = rgba(230, 230, 230, 0.0)
+    size = 350, 50
+    outline_thickness = 2
+    dots_size = 0.3
+    dots_spacing = 0.5
+    outer_color = rgba(230, 230, 230, 0.5)
+    inner_color = rgba(230, 230, 230, 0.15)
     font_color = rgba(49, 183, 242, 0.5)
+    font_family = $FONT
     fade_on_empty = true
-    fade_timeout = 1000
-    placeholder_text =
-    hide_input = false
-    rounding = -1
-    check_color = rgba(239, 236, 254, 0.0)
-    fail_color = rgba(236, 72, 166, 0.65)
-    fail_text =
-    fail_transition = 200
-    capslock_color = rgba(236, 72, 166, 0.35)
-    numlock_color = rgba(236, 72, 166, 0.35)
-    bothlock_color = rgba(236, 72, 166, 0.35)
-    invert_numlock = false
-    swap_font_color = false
+    fade_timeout = 750
+    placeholder_text = 
+    # check_color =  
+    fail_color = rgba(ff6767ff)
+    capslock_color = rgba(246, 194, 158, 1.0)
+    fail_text = Service denied
+    fail_transition = 750
+    
 
-    position = 0, -800
+    position = 0, -300
     halign = center
     valign = center
 }
 
 label {
     monitor =
-    text = $ATTEMPTS[enter password]
+    text = cmd[update:250] $HOME/.config/hypr/scripts/capslock.sh
+    color = rgba(246, 194, 158, 1.0)
+    font_size = 16
+    font_family = $FONT
+    position = 0, 150
+    halign = center
+    valign = bottom
+}
+
+label {
+    monitor =
+    text = $ATTEMPTS[Enter password]
     color = rgba(239, 236, 254, 0.35)
-    font_size = 28
+    font_size = 20
     font_family = $FONT
 
     position = 0, 50
@@ -88,14 +94,14 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%H:%M") </big></b>"
     color = rgba(49, 183, 242, 0.75)
-    font_size = 250
+    font_size = 150
     # font_family = SF Pro Display Bold
     font_family = $FONT
 
     shadow_passes = 3
     shadow_size = 4
 
-    position = 0, 50
+    position = 0, 300
     halign = center
     valign = center
 }
@@ -104,13 +110,29 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b> "$(date +'%A, %-d. %B %Y')" </b>"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 38
+    font_size = 24
     font_family = $FONT
 
-    position = 0, -150
+    position = 0, 125
     halign = center
     valign = center
 }
+
+# image {
+#     monitor =
+#     path = $BACKGROUND_IMAGE 
+#     opacity = 1.0
+#     border_color = rgba(255, 255, 255, 0.75)
+#     border_size = 0
+#     size = 100
+#     rounding = 100
+#     rotate = 0
+#     reload_time = -1
+#     reload_cmd =
+#     position = 0, -200
+#     halign = center
+#     valign = center
+# }
 
 # ---------------------------------------------------------------------
 # ---------------------------------- USER -----------------------------
@@ -269,14 +291,14 @@ label {
 # }
 #
 #
-# label {
-#     monitor =
-#     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon) $(~/.config/hypr/scripts/power.sh --value)"
-#     color = rgba(97, 255, 202, 1.0)
-#     color = rgba(255, 103, 103, 1.0)
-#     font_size = 32
-#     font_family = $FONT
-#     position = -15, -10
-#     halign = right
-#     valign = top
-# }
+label {
+    monitor =
+    text = cmd[update:5000] echo -e "$($HOME/.config/hypr/scripts/power.sh --icon) $(~/.config/hypr/scripts/power.sh --value)"
+    color = rgba(97, 255, 202, 1.0)
+    color = rgba(255, 103, 103, 1.0)
+    font_size = 16
+    font_family = $FONT
+    position = -15, -10
+    halign = right
+    valign = top
+}
