uwsm and sddm theme added

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -90,15 +90,14 @@ device {
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
-exec-once = hyprpaper
-exec-once = hypridle
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hypridle
 # exec-once = hyprpm reload  #-n
 
 
 # -----------------------------------------------------
 # --------------------- CURSOR ------------------------
 # -----------------------------------------------------
-
 $CURSOR = BreezeX-RosePine-Linux        # BreezeX-RosePineDawn-Linux BreezeX-RosePine-Linux
 $HYPR_CURSOR = rose-pine-hyprcursor     # currently no light/dawn version available
 $CURSOR_SIZE = 32                       # 16, 24, 32, 48
@@ -109,38 +108,36 @@ env = XCURSOR_THEME, $CURSOR
 env = HYPRCURSOR_SIZE, $CURSOR_SIZE
 env = HYPRCURSOR_THEME, $HYPR_CURSOR
 
-env = GTK_THEME,Adwaita-dark
-
 cursor {
     no_hardware_cursors = true
 }
 
-# -----------------------------------------------------
-# --------------------- THEME -------------------------
-# -----------------------------------------------------
+env = GTK_THEME,Tokyonight-Dark
+
 exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
 
 
 # -----------------------------------------------------
 # -------------------- AUTOSTART ----------------------
 # -----------------------------------------------------
-exec-once = systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
+exec-once = uwsm app -- systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
 
-exec = pkill quickshell; quickshell
+exec = uwsm app -- pkill quickshell; quickshell
 # exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
 # exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
+
 
 # -----------------------------------------------------
 # -------------------- ENVIRONMENT --------------------
 # -----------------------------------------------------
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-#env = WLR_RENDERER, vulkan
-#env = WLR_SCALE_FILTER, nearest
+# env = WLR_RENDERER, vulkan
+# env = WLR_SCALE_FILTER, nearest
 
-env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
@@ -152,8 +149,8 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 
-# env = _JAVA_AWT_WM_NONEREPARENTING,1
-# env = CLUTTER_BACKEND,wayland
+env = _JAVA_AWT_WM_NONEREPARENTING,1
+env = CLUTTER_BACKEND,wayland
 
 # See https://wiki.hyprland.org/Nvidia
 env = GBM_BACKEND,nvidia-drm
@@ -166,6 +163,7 @@ env = __GL_VRR_ALLOWED,0
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = EGL_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
+
 
 
 # -----------------------------------------------------
