--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -3,7 +3,9 @@ binds {
     bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
     bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
     bind = CTRL_ALT, L, exec, hyprlock
+    bind = SUPER_SHIFT, L, exec, uwsm app -- sddm-greeter-qt6 --test-mode --theme /usr/share/sddm/themes/sddm-astronaut-theme/
     bind = CTRL_ALT, N, exec, brave --app=https://netflix.com
+    bind = SUPER_SHIFT, P, exec, uwsm app -- hyprpicker -a
 
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
