--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -1,4 +1,8 @@
 binds {
+    # Quickshell
+    bind = SUPER, R, global , tgshell:launcher
+    bind = SUPER_SHIFT, Q, global , tgshell:session
+
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
     bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
     bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
@@ -21,14 +25,14 @@ binds {
     bind = SUPER, U, exec, ~/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
 
     bind = SUPER_SHIFT, C, killactive
-    bind = SUPER_SHIFT, Q, exit
+    # bind = SUPER_SHIFT, Q, exit
 
     bind = SUPER_SHIFT, R, exec, hyprctl reload
 
     bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
 
-    # Aylur's GTK Shell Windows and Kando Pie Menu
-    bind = SUPER, R, exec, rofi -show drun
+    # # Aylur's GTK Shell Windows and Kando Pie Menu
+    # bind = SUPER, R, exec, rofi -show drun
 
     # Capturing
     bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
