--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -20,11 +20,15 @@ windowrules {
     # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
     # # ------------------------------
-    # # ------------ kitty -----------
+    # # ------- Center window --------
     # # ------------------------------
-    # windowrulev2 = float, class:^(.*kitty.*)$,title:^(.*float.*)
-    # windowrulev2 = size 50% 40%, class:^(.*kitty.*)$,title:^(.*float.*)
-    # windowrulev2 = centerwindow, class:^(.*kitty.*)$,title:^(.*float.*)
+    windowrulev2 = float, title:^(.*centerfloat.*)
+    windowrulev2 = size 50% 40%, title:^(.*centerfloat.*)
+    windowrulev2 = centerwindow, title:^(.*centerfloat.*)
+    windowrulev2 = bordercolor rgb(79768033) rgb(79768033), title:^(.*centerfloat.*)
+    windowrulev2 = bordersize 2, title:^(.*centerfloat.*)
+    windowrulev2 = rounding 10, title:^(.*centerfloat.*)
+
     # # windowrulev2 = move 25% 25%, class:^(.*kitty.*)$,title:^(.*float.*)
     #
     #
