--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -120,11 +120,13 @@ exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons Bree
 # -----------------------------------------------------
 # -------------------- AUTOSTART ----------------------
 # -----------------------------------------------------
+exec-once = gnome-keyring-daemon --start --components=secrets || $ERROR_NOTIFY "gnome-keyring-daemon could not be started."
 exec-once = uwsm app -- systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
 
-exec = uwsm app -- pkill quickshell; quickshell
+exec = uwsm app -- qs kill; qs
+# exec = uwsm app -- pkill quickshell; quickshell
 # exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
 # exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
 
