--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -3,7 +3,7 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = ags quit; ags run; hyprctl dispatch dpms on # to avoid having to press a key twice to turn on the display.
+    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
 listener {
@@ -13,23 +13,23 @@ listener {
 }
 
 listener {
-    timeout = 120
+    timeout = 300
         on-timeout = brightnessctl -s set 10
         on-resume = brightnessctl -r
 }
 
 listener {
-    timeout = 300
+    timeout = 600
         on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 600
+    timeout = 1200
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
 listener {
-    timeout = 900
+    timeout = 2400
     on-timeout = systemctl suspend
 }
